Added more things

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "homepage": "https://github.com/brandwand/JavascriptFinal#readme",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
+    "mongoose": "^4.8.6",
     "pug": "^2.0.0-beta11"
   }
 }
