--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
+    "cookie-sessions": "0.0.2",
     "express": "^4.15.2",
+    "express-sessions": "^1.0.6",
     "mongoose": "^4.8.6",
     "pug": "^2.0.0-beta11"
   }
