--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.2",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.15.1",
     "mongoose": "^4.8.6",
     "pug": "^2.0.0-beta11"
   }
